--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,24 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "REEEEEE",
+  "name": "ER:LC Update News Website",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "Logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "Logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
+  "description": "Die LCN",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
